<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/textA"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="231dp"
        android:layout_height="44dp"
        android:text="@string/calculator"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonCalculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOutput"
        app:layout_constraintVertical_bias="0.127" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="52dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonReset"
        app:layout_constraintTop_toBottomOf="@+id/textViewOutput"
        app:layout_constraintVertical_bias="0.127" />

    <EditText
        android:id="@+id/editTextA"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="Enter A"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/editTextB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextB"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="Enter B"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/editTextA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextA"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="149dp"
        android:layout_height="187dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewOperation"
        app:layout_constraintTop_toBottomOf="@+id/editTextB">

        <RadioButton
            android:id="@+id/radioButtonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Add" />

        <RadioButton
            android:id="@+id/radioButtonSubtract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Subtract" />

        <RadioButton
            android:id="@+id/radioButtonMultiply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Multiply" />

        <RadioButton
            android:id="@+id/radioButtonDivide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Divide" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewOperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/operation"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/editTextA"
        app:layout_constraintTop_toBottomOf="@+id/editTextA" />

    <TextView
        android:id="@+id/textViewOutput"
        android:layout_width="126dp"
        android:layout_height="32dp"
        android:layout_marginTop="68dp"
        android:text="@string/output"
        app:layout_constraintStart_toStartOf="@+id/textViewOperation"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textViewOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/operator"
        app:layout_constraintEnd_toStartOf="@+id/editTextB"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/editTextA"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>